<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">


    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="368dp"
            android:layout_height="495dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp">

        <TextView
                android:text="@string/latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/latitude_tv"
                android:layout_weight="1"/>
        <TextView
                android:text="@string/longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/longitude_tv"
                android:layout_weight="1"/>
        <TextView
                android:text="@string/altitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/altitude_tv"
                android:layout_weight="1"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>