<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="752dp"
            android:layout_height="864dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp">
        <TextView
                android:text="@string/choisir_alarme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/label_date"/>
        <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            <RadioButton
                    android:text="@string/une_minute"
                    android:layout_width="207dp"
                    android:layout_height="56dp"
                    android:id="@+id/radioButton_une_minute"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintHorizontal_bias="0.664"
                    android:layout_marginTop="60dp"
                    android:onClick="buttonclicked"
                    android:checked="true"/>
            <RadioButton
                    android:text="@string/cinq_minutes"
                    android:layout_width="215dp"
                    android:layout_height="51dp"
                    android:id="@+id/radioButton_cinq_minutes" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/radioButton_charcuterie"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintHorizontal_bias="0.672" app:layout_constraintVertical_bias="0.077"
                    android:onClick="buttonclicked"/>
            <RadioButton
                    android:text="@string/quinze_minutes"
                    android:layout_width="204dp"
                    android:layout_height="56dp"
                    android:id="@+id/radioButton_quinze_minutes"
                    android:layout_marginTop="2dp"
                    app:layout_constraintTop_toBottomOf="@+id/radioButton_boisson"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"

                    app:layout_constraintHorizontal_bias="0.656"
                    app:layout_constraintVertical_bias="0.0"
                    android:onClick="buttonclicked"/>
        </RadioGroup>
        <Button
                android:text="@string/btn_envoyer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_envoyer_date"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>